# example-dummyproject

./: .gitignore  LICENSE  README.md  deprecated_pyproject.toml  environment-dev.yml  pyproject.toml  requirements-dev.txt  setup.cfg  setup.py  setup_todeletemaybe.py  tox.ini  tox_original.ini
docs/source/: api.rst  conf.py  index.rst
notebooks/: example.ipynb
project/: __init__.py  cli.py  script.py
tests/: test_cli.py  test_script.py  test_script_bar.py  test_script_foo.py  test_script_voila.py
