[build-system]
requires = ["flit"]
build-backend = "flit.buildapi"

[tool.flit.metadata]
module = "project"
author = "Maxime Liquet"
author-email = "maximeliquet@free.fr"
description-file = "README.md"
home-page = "https://github.com/maximlt/project"
classifiers = ["License :: OSI Approved :: MIT License"]
dist-name="projectxyxyxy"

[tool.flit.metadata.requires-extra]
test = ["pytest", "pytest-cov", "tox"]

[tool.flit.metadata.urls]
Documentation = "https://xyxyxy.readthedocs.io/en/latest/"